--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,33 @@
 * {
 	font-family: Helvetica;
+	text-align: center;
 }
+
+h1 {
+	font-size: 70px;
+	color: white;
+}
+
+a {
+	font-size: 18px;
+	color: white;
+}
+
+h2 {
+	font-size: 32px;
+}
+
+h3 {
+	font-size: 23px;
+	font-weight: bold;
+}
+
+p {
+	font-size: 14px;
+}
+
+.header {
+	background-image: url("../images/flatiron.png");
+
+}
+
