made minor adjustment to css styles to collapse background-image

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,11 +31,7 @@ p {
 	font-size: 18px;
 }
 
-.header {
-	background-image: url("../images/flatiron.png");
-
-}
-
+.header,
 #designed-in {
 	background-image: url("../images/flatiron.png");
 }
